<resources>

    <string name="app_name">Covid Safety Precaution Checker</string>
    <string name="precaution_1">1. Wearing a mask when outside</string>
    <string name="precaution_2">2. Washing hands frequently</string>
    <string name="precaution_3">3. Maintaining 2 feet distance</string>
    <string name="precaution_4">4. Covering nose and mouth while sneezing and coughing</string>
    <string name="precaution_5">5. Taking health diets</string>

    <string name="enterName">Enter your Name</string>
    <string name="submit">submit</string>
    <string name="clear">clear</string>
    <string name="yes_no">[YES/NO]</string>
    <string name="enterAnswer">Enter your Answer</string>
    <string name="Activity2_Heading">Your Answers </string>

    <string name="checkRiskStatus">Check Risk Status</string>
    <string name="enterYourName">Enter your Name</string>
    <string name="instructions">Please Select Precautions You are Taking</string>


</resources>